fixes large gap above nowcast in drawer
this is a temp fix until ben fixes proper

--- a/client/components/map/drawer.scss
+++ b/client/components/map/drawer.scss
@@ -2,6 +2,10 @@
 
 // todo: extract out colors and box-shadow
 .ac-drawer {
+    // todo: hack until this is really fixed. yr
+    #forecast {
+        margin-top: 0 !important;
+    }
     position: absolute;
     top: 75px;
     height: 100%;
